target/D95Parser.py
# Generated from main/d95/parser/D95.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D95Parser ( Parser ):

    grammarFileName = "D95.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'break'", "'continue'", 
                     "'elseif'", "'if'", "'else'", "'while'", "'foreach'", 
                     "'as'", "'function'", "'true'", "'false'", "'array'", 
                     "'define'", "'return'", "'str2int'", "'int2str'", "'str2float'", 
                     "'float2str'", "'str2bool'", "'bool2str'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'=>'", "'==.'", "'<='", 
                     "'>='", "'!='", "'=='", "'+.'", "'&&'", "'||'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'='", "'<'", "'>'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
                     "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "STRING", "INTEGER", "FLOAT", 
                      "DECIMAL", "HEXADECIMAL", "BINARY", "OCTAL", "COMMENT", 
                      "BREAK", "CONTINUE", "ELSE_IF", "IF", "ELSE", "WHILE", 
                      "FOREACH", "AS", "FUNCTION", "TRUE", "FALSE", "ARRAY", 
                      "DEFINE", "RETURN", "STR_INT", "INT_STR", "STR_FLOAT", 
                      "FLOAT_STR", "STR_BOOL", "BOOL_STR", "VARIABLE_IDENTIFIER", 
                      "FUNCTION_IDENTIFIER", "CONSTANT_IDENTIFIER", "ASSIGN_GREATER", 
                      "ASSIGN_ASSIGN_DOT", "LESS_ASSIGN", "GREATER_ASSIGN", 
                      "NEG_ASSIGN", "ASSIGN_ASSIGN", "ADD_DOT", "AND", "OR", 
                      "ADD", "MINUS", "MUL", "DIV", "MOD", "NEG", "ASSIGN", 
                      "LESS", "GREATER", "OPEN_ROUND", "CLOSE_ROUND", "OPEN_BRACKET", 
                      "CLOSE_BRACKET", "OPEN_SHARP", "CLOSE_SHARP", "DOT", 
                      "COMMA", "COLON", "SEMI", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_body = 1
    RULE_declaration_constants = 2
    RULE_declaration_constant = 3
    RULE_declaration_variable = 4
    RULE_function = 5
    RULE_parameter = 6
    RULE_statements = 7
    RULE_statement = 8
    RULE_assignment_stmt = 9
    RULE_if_stmt = 10
    RULE_elseif_stmt = 11
    RULE_else_stmt = 12
    RULE_foreach_stmt = 13
    RULE_while_stmt = 14
    RULE_break_stmt = 15
    RULE_continue_stmt = 16
    RULE_call_stmt = 17
    RULE_return_stmt = 18
    RULE_expression = 19
    RULE_operands = 20
    RULE_operator_multiplying = 21
    RULE_operator_adding = 22
    RULE_operator_logical = 23
    RULE_operator_relational = 24
    RULE_operator_string = 25
    RULE_operator_index = 26
    RULE_coercions = 27
    RULE_expression_index = 28
    RULE_function_call = 29
    RULE_call_parameter = 30
    RULE_array = 31
    RULE_array_body = 32
    RULE_array_multidimensional = 33
    RULE_array_associative = 34
    RULE_key_associative = 35
    RULE_value_associative = 36
    RULE_array_index = 37
    RULE_types = 38

    ruleNames =  [ "program", "body", "declaration_constants", "declaration_constant", 
                   "declaration_variable", "function", "parameter", "statements", 
                   "statement", "assignment_stmt", "if_stmt", "elseif_stmt", 
                   "else_stmt", "foreach_stmt", "while_stmt", "break_stmt", 
                   "continue_stmt", "call_stmt", "return_stmt", "expression", 
                   "operands", "operator_multiplying", "operator_adding", 
                   "operator_logical", "operator_relational", "operator_string", 
                   "operator_index", "coercions", "expression_index", "function_call", 
                   "call_parameter", "array", "array_body", "array_multidimensional", 
                   "array_associative", "key_associative", "value_associative", 
                   "array_index", "types" ]

    EOF = Token.EOF
    BOOLEAN=1
    STRING=2
    INTEGER=3
    FLOAT=4
    DECIMAL=5
    HEXADECIMAL=6
    BINARY=7
    OCTAL=8
    COMMENT=9
    BREAK=10
    CONTINUE=11
    ELSE_IF=12
    IF=13
    ELSE=14
    WHILE=15
    FOREACH=16
    AS=17
    FUNCTION=18
    TRUE=19
    FALSE=20
    ARRAY=21
    DEFINE=22
    RETURN=23
    STR_INT=24
    INT_STR=25
    STR_FLOAT=26
    FLOAT_STR=27
    STR_BOOL=28
    BOOL_STR=29
    VARIABLE_IDENTIFIER=30
    FUNCTION_IDENTIFIER=31
    CONSTANT_IDENTIFIER=32
    ASSIGN_GREATER=33
    ASSIGN_ASSIGN_DOT=34
    LESS_ASSIGN=35
    GREATER_ASSIGN=36
    NEG_ASSIGN=37
    ASSIGN_ASSIGN=38
    ADD_DOT=39
    AND=40
    OR=41
    ADD=42
    MINUS=43
    MUL=44
    DIV=45
    MOD=46
    NEG=47
    ASSIGN=48
    LESS=49
    GREATER=50
    OPEN_ROUND=51
    CLOSE_ROUND=52
    OPEN_BRACKET=53
    CLOSE_BRACKET=54
    OPEN_SHARP=55
    CLOSE_SHARP=56
    DOT=57
    COMMA=58
    COLON=59
    SEMI=60
    WS=61
    ILLEGAL_ESCAPE=62
    UNCLOSE_STRING=63
    UNTERMINATED_COMMENT=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_constants(self):
            return self.getTypedRuleContext(D95Parser.Declaration_constantsContext,0)


        def body(self):
            return self.getTypedRuleContext(D95Parser.BodyContext,0)


        def EOF(self):
            return self.getToken(D95Parser.EOF, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D95Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.declaration_constants()
            self.state = 79
            self.body()
            self.state = 80
            self.match(D95Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_variable(self):
            return self.getTypedRuleContext(D95Parser.Declaration_variableContext,0)


        def function(self):
            return self.getTypedRuleContext(D95Parser.FunctionContext,0)


        def body(self):
            return self.getTypedRuleContext(D95Parser.BodyContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = D95Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.declaration_variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.function()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.declaration_variable()
                self.state = 85
                self.body()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.function()
                self.state = 88
                self.body()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_constantsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_constant(self):
            return self.getTypedRuleContext(D95Parser.Declaration_constantContext,0)


        def declaration_constants(self):
            return self.getTypedRuleContext(D95Parser.Declaration_constantsContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_declaration_constants

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_constants" ):
                return visitor.visitDeclaration_constants(self)
            else:
                return visitor.visitChildren(self)




    def declaration_constants(self):

        localctx = D95Parser.Declaration_constantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration_constants)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.declaration_constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.declaration_constant()
                self.state = 95
                self.declaration_constants()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_constantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(D95Parser.DEFINE, 0)

        def OPEN_ROUND(self):
            return self.getToken(D95Parser.OPEN_ROUND, 0)

        def CONSTANT_IDENTIFIER(self):
            return self.getToken(D95Parser.CONSTANT_IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(D95Parser.COMMA, 0)

        def expression(self):
            return self.getTypedRuleContext(D95Parser.ExpressionContext,0)


        def CLOSE_ROUND(self):
            return self.getToken(D95Parser.CLOSE_ROUND, 0)

        def SEMI(self):
            return self.getToken(D95Parser.SEMI, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_declaration_constant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_constant" ):
                return visitor.visitDeclaration_constant(self)
            else:
                return visitor.visitChildren(self)




    def declaration_constant(self):

        localctx = D95Parser.Declaration_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(D95Parser.DEFINE)
            self.state = 101
            self.match(D95Parser.OPEN_ROUND)
            self.state = 102
            self.match(D95Parser.CONSTANT_IDENTIFIER)
            self.state = 103
            self.match(D95Parser.COMMA)
            self.state = 104
            self.expression(0)
            self.state = 105
            self.match(D95Parser.CLOSE_ROUND)
            self.state = 106
            self.match(D95Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_variableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_stmt(self):
            return self.getTypedRuleContext(D95Parser.Assignment_stmtContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_declaration_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_variable" ):
                return visitor.visitDeclaration_variable(self)
            else:
                return visitor.visitChildren(self)




    def declaration_variable(self):

        localctx = D95Parser.Declaration_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.assignment_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(D95Parser.FUNCTION, 0)

        def FUNCTION_IDENTIFIER(self):
            return self.getToken(D95Parser.FUNCTION_IDENTIFIER, 0)

        def OPEN_ROUND(self):
            return self.getToken(D95Parser.OPEN_ROUND, 0)

        def parameter(self):
            return self.getTypedRuleContext(D95Parser.ParameterContext,0)


        def CLOSE_ROUND(self):
            return self.getToken(D95Parser.CLOSE_ROUND, 0)

        def OPEN_SHARP(self):
            return self.getToken(D95Parser.OPEN_SHARP, 0)

        def statements(self):
            return self.getTypedRuleContext(D95Parser.StatementsContext,0)


        def CLOSE_SHARP(self):
            return self.getToken(D95Parser.CLOSE_SHARP, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = D95Parser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(D95Parser.FUNCTION)
                self.state = 111
                self.match(D95Parser.FUNCTION_IDENTIFIER)
                self.state = 112
                self.match(D95Parser.OPEN_ROUND)
                self.state = 113
                self.parameter()
                self.state = 114
                self.match(D95Parser.CLOSE_ROUND)
                self.state = 115
                self.match(D95Parser.OPEN_SHARP)
                self.state = 116
                self.statements()
                self.state = 117
                self.match(D95Parser.CLOSE_SHARP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(D95Parser.FUNCTION)
                self.state = 120
                self.match(D95Parser.FUNCTION_IDENTIFIER)
                self.state = 121
                self.match(D95Parser.OPEN_ROUND)
                self.state = 122
                self.match(D95Parser.CLOSE_ROUND)
                self.state = 123
                self.match(D95Parser.OPEN_SHARP)
                self.state = 124
                self.statements()
                self.state = 125
                self.match(D95Parser.CLOSE_SHARP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(D95Parser.VARIABLE_IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(D95Parser.COMMA, 0)

        def parameter(self):
            return self.getTypedRuleContext(D95Parser.ParameterContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = D95Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(D95Parser.VARIABLE_IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(D95Parser.VARIABLE_IDENTIFIER)
                self.state = 131
                self.match(D95Parser.COMMA)
                self.state = 132
                self.parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(D95Parser.StatementContext,0)


        def statements(self):
            return self.getTypedRuleContext(D95Parser.StatementsContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = D95Parser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.statement()
                self.state = 137
                self.statements()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_stmt(self):
            return self.getTypedRuleContext(D95Parser.Assignment_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(D95Parser.If_stmtContext,0)


        def foreach_stmt(self):
            return self.getTypedRuleContext(D95Parser.Foreach_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(D95Parser.While_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(D95Parser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(D95Parser.Continue_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(D95Parser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(D95Parser.Return_stmtContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = D95Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D95Parser.VARIABLE_IDENTIFIER, D95Parser.CONSTANT_IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.assignment_stmt()
                pass
            elif token in [D95Parser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.if_stmt()
                pass
            elif token in [D95Parser.FOREACH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.foreach_stmt()
                pass
            elif token in [D95Parser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.while_stmt()
                pass
            elif token in [D95Parser.BREAK]:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.break_stmt()
                pass
            elif token in [D95Parser.CONTINUE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.continue_stmt()
                pass
            elif token in [D95Parser.FUNCTION_IDENTIFIER]:
                self.enterOuterAlt(localctx, 7)
                self.state = 148
                self.call_stmt()
                pass
            elif token in [D95Parser.RETURN]:
                self.enterOuterAlt(localctx, 8)
                self.state = 149
                self.return_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(D95Parser.VARIABLE_IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(D95Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(D95Parser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(D95Parser.SEMI, 0)

        def expression_index(self):
            return self.getTypedRuleContext(D95Parser.Expression_indexContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_assignment_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_stmt" ):
                return visitor.visitAssignment_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assignment_stmt(self):

        localctx = D95Parser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment_stmt)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(D95Parser.VARIABLE_IDENTIFIER)
                self.state = 153
                self.match(D95Parser.ASSIGN)
                self.state = 154
                self.expression(0)
                self.state = 155
                self.match(D95Parser.SEMI)
                pass
